--- a/src/assets/protheus-dev-sandbox.yml
+++ b/src/assets/protheus-dev-sandbox.yml
@@ -2,10 +2,10 @@ version: '3.2'
 
 services:
     license:
-      image: docker.totvs.io/dcp/license
+      image: docker.totvs.io/dcp/license:latest
 
     appserver:
-      image: docker.totvs.io/dcp/appserver
+      image: docker.totvs.io/dcp/appserver_x32_13:latest
       depends_on:
         - dbaccess
       ports:
@@ -18,13 +18,13 @@ services:
         - rpo_data:/apo
 
     dbaccess:
-      image: docker.totvs.io/dcp/dbaccess
+      image: docker.totvs.io/dcp/dbaccess_x64:published
       depends_on:
         - database
         - license
 
     database:
-      image: docker.totvs.io/dcp/database
+      image: docker.totvs.io/dcp/postgres_dump:latest
       volumes:
         - db_data:/var/lib/postgresql/data
 
